<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TrackYourStress</string>
    <string name="welcome_text">Herzlich willkommen bei TrackYourStress!</string>
    <string name="TrackYourStressLogo">Das Logo von TrackYourStress: Ein Yin/Yang-Symbol in blau und gelb.</string>
    <string name="Login_text">Login</string>
    <string name="Register_text">Registrieren</string>
    <string name="title_activity_login">Login</string>
    <string name="Email">Email</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Passwort</string>
    <string name="login_failed">"Login fehlgeschlagen"</string>
    <string name="password_confirm">Passwort bestätigen</string>
    <string name="username">Nutzername</string>
    <string name="register_link_send">Die Registrierigung wurde durchgeführt und Ihnen wurde <br /> ein Link zur Verifizierung an die angegebenen Email gesendet. Bitte bestätigen
        Sie Ihren Account indem Sie darauf klicken. <br />Danach können Sie sich einloggen.</string>
    <string name="resend_verification_link">Verifizierungs-Link noch einmal senden</string>
    <string name="first_name">Vorname</string>
    <string name="last_name">Nachname</string>
    <string name="sex">Geschlecht</string>
    <string name="male">Männlich</string>
    <string name="female">Weiblich</string>
    <string name="not_known">Keine Angabe</string>
    <string name="submit">Abschicken</string>
    <string name="change_password">Password ändern</string>
    <string name="delete_profile">Profil löschen</string>
    <string name="turn_on_all_notifications">Alle Benachrichtigungen</string>
    <string name="turn_on_daily_notifications">Tägliche Benachrichtigungen</string>
    <string name="turn_on_weekly_notifications">Wöchentliche Benachrichtigungen</string>
    <string name="manage_notifications">Benachrichtigungen verwalten</string>
    <string name="turn_on_monthly_notifications">Monatliche Benachrichtigungen</string>
    <string name="off">AUS</string>
    <string name="on">AN</string>
    <string name="daily_notifications_on">Tägliche Benachrichtigungen AN</string>
    <string name="weekly_notfications_on">Wöchentliche Benachrichtigungen AN</string>
    <string name="monthly_notifications_on">Monatliche Benachrichtigungen AN</string>
    <string name="weekly_notifications_off">Wöchentliche Benachrichtigungen AUS</string>
    <string name="channel_daily_notifications">TrackYourStress - Täglicher Fragebogen</string>
    <string name="channel_id_daily">1</string>
    <string name="title_questionnaire">Titel</string>
    <string name="running">Laufend</string>
    <string name="repeatable">Wiederholbar</string>
    <string name="type">Typ</string>
    <string name="do_you_really_want_to_delete_your_profile">Möchten Sie Ihr Profil sicher löschen?</string>
    <string name="ok">OK</string>
    <string name="cancel">Abbruch</string>
    <string name="action_sign_in_short">Einloggen</string>
    <string name="myActivities">Aktivitäten</string>
    <string name="profile">Profil</string>
    <string name="activities">Aktivitäten</string>
    <string name="questionnaires">Fragebögen</string>
    <string name="notifications">Benachrichtigungen</string>
    <string name="logout">Logout</string>
    <string name="about_us">Über uns</string>
    <string name="options">Optionen</string>
    <string name="home" translatable="false">Home</string>
    <string name="home_text">Mit TrackYourStress können Sie Ihre individuellen Schwankungen des Stress-Levels mittels einer Smartphone App erfassen. Mit Hilfe ihres Smartphones können Sie die Schwankungen Ihres Stress-Levels systematisch erfassen und herausfinden womit diese zusammenhängen.</string>
    <string name="confirmSaveData">Ich bin einverstanden, dass die App TrackYourStress Daten auf meinem Gerät speichert</string>
    <string name="imprint_text"><![CDATA[
    <h2>Impressum</h2>
    <h3>Herausgeber</h3>
Tinnitus Research Initiative <br>
Foundation <br>
Universitätsstrasse 84 <br>
93053 Regensburg <br>
phone: +49 941 941 2096 <br>
fax: +49 941 941 2925 <br>
e-mail: foundation@tinnitusresearch.org <br>
Umsatzsteueridentifikationsnummer DE133714227 <br>

<p>Die Stiftung Tinnitus Research Initiative ist mit Urkunde vom 01.02.2010 Nr. B 1.1-1222.184-1 gemäß §§ 80, 81 des Bürgerlichen Gesetzbuches eine rechtsfähige Stiftung des bürgerlichen Rechts mit Sitz in Regensburg. Aufgrund ihrer Satzungsbestimmungen und den entsprechenden stiftungsrechtlichen Vorschriften (Art. 10 Abs. 1 BayStG) der staatlichen Stiftungsaufsicht, Regierung der Oberpfalz. Die Körperschaft dient ausschließlich und unmittelbar steuerbegünstigten Zwecken. </p>
<h2>Vertretungsberechtigt ist der Stiftungsvorstand:</h2>

Dr. med. Berthold Langguth, Regensburg, Deutschland (Vorsitzender) <br>
Prof. Ana Belén Elgoyhen, Buenos Aires, Argentinen <br>
Prof. Dirk De Ridder, Antwerpen, Belgien <br>
<h2>Zuständige Aufsichtsbehörde: </h2>

Regierung der Oberpfalz <br>
Emmeramsplatz 8 <br>
93047 Regensburg <br>
Deutschland <br>

<h2>Inhalt</h2>

Verantwortlich im Sinne des §5 TMG: <br>
Dr. Winfried Schlee<br>
Tinnitus Research Initiative <br>
Foundation <be>
Universitätsstrasse 84 <br>
93053 Regensburg <br>
phone: +49 941 941 2096 <br>
e-mail: winfried.schlee@tinnitusresearch.org<br>
<h2>Konzeption und technische Umsetzung </h2>

Julia Abramenko <br>
Institut für Datenbanken und Informationssysteme der Universität Ulm<br>
email: Julia.Abramenko@uni-ulm.de<br>

Pascal Damasch <be>
Institut für Datenbanken und Informationssysteme der Universität Ulm<br>
email: Pascal.Damasch@uni-ulm.de <br>

Jochen Herrmann <br>
Institut für Datenbanken und Informationssysteme der Universität Ulm<br>
email: Jochen.Herrmann@uni-ulm.de <br>

Rüdiger Pryss<br>
Institut für Datenbanken und Informationssysteme der Universität Ulm<br>
email: Rüdiger.Pryss@uni-ulm.de<br>

<h2>Haftungsausschluss</h2>

<p>Mit Trackyourstress.com wird ein Service zur Messung der individuellen Tinnitusbelastung angeboten. Sie haben die Möglichkeiten Ihre Daten einzusehen und mit ihrem behandelnden Arzt oder Therapeuten zu besprechen. Eine Garantie für die Richtigkeit und juristische Verwertbarkeit der Daten kann weder von Seiten der Tinnitus Research Initiative noch von Mitarbeitern des Trackyourtinnitus Projektes gegeben werden. </p>
<h2>Trackyourstress.com ist kein Medizinprodukt </h2>

<p>Wir möchten ausdrücklich darauf hinweisen, dass wir mit Trackyourstress.com kein Medizinprodukt bereitstellen. Eine Behandlung von Stress ist nicht intendiert. </p>

<p>Eine Verschlechterung des Stresses ist nicht zu erwarten. Sollten Sie dennoch negative Veränderungen bemerken, beenden sie bitte unverzüglich die Teilnahme und suchen Ihren Arzt oder Therapeuten auf. </p>
<h2>Haftungsausschluss bei Links zu externen Inhalten </h2>

<p>Wir sind als Inhaltsanbieter für die eigenen Inhalte, die sie zur Nutzung bereithält, nach den allgemeinen Gesetzen verantwortlich. Von diesen eigenen Inhalten sind Querverweise auf die von anderen Anbietern bereitgehaltenen Inhalte zu unterscheiden. Diese fremden Inhalte stammen weder von uns, noch haben wir die Möglichkeit, den Inhalt von Seiten Dritter zu beeinflussen. </p>

<p>Die Inhalte fremder Seiten, spiegeln nicht unsere Meinung wider, sondern dienen lediglich der Information und der Darstellung von Zusammenhängen.</p>
<h2>Datenschutz </h2>

<p>Wir sind uns bewusst, dass wir mit dem Service von Trackyourstress.com hochsensible Daten speichern und verwenden daher die höchsten Standards des Datenschutzes um die Sicherheit und Diskretion Ihrer Daten zu gewährleisten. </p>

<p>Ihre Daten werden vollständig anonymisiert verarbeitet und gespeichert. Ein Rückschluss auf ihre Identität ist zu keinem Zeitpunkt möglich. Wir werden sie nie nach Ihrem vollständigen Namen, Ihrer Telefonnummer, Ihrer Adresse oder anderen Kontaktdaten fragen. Die IP-Adresse Ihres Computers wird nicht gespeichert und jeder Datenaustausch über das Internet ist mit SSL-Verschlüsselung gesichert. </p>

<p>Das Angeben einer Email-Adresse ist nicht notwendig, wird aber ausdrücklich empfohlen. Die Email-Adresse wird nur zur Wiederherstellung des Passwortes verwendet, wenn Sie ihre Zugangsdaten vergessen haben. </p>

<p>Wenn sie ihre Email-Adresse nicht angeben wollen, können sie dennoch den kompletten Service von Trackyourstress.com uneingeschränkt verwenden. </p>

<p>Die wissenschaftlichen Erkenntnisse aus diesem Forschungsprojekt können in wissenschaftlichen Fachzeitschriften veröffentlich werden. Dabei wird es jedoch nicht möglich sein, Ihre persönlichen Informationen zu identifizieren. </p>
]]>
    </string>
    <string name="about_text"> <![CDATA[
    <h2>Über uns</h2>

<p>Unter Stress versteht man die Antwort des Organismus auf eine Anforderung. Unterschiedliche Menschen können auf ein und dieselbe Anforderung unterschiedliche Stressreaktionen zeigen. Aber auch eine Person kann auf ein und dieselbe Anforderung in unterschiedlichen Situationen / Kontexten eine unterschiedliche Stressreaktion zeigen. Welche Stressreaktion auf eine Anforderung folgt, hängt z. B. von den Bewältigungsmechanismen einer Person ab. Diese Bewältigungsmechanismen werden auch als Coping bezeichnet. </p>

<p>Mit diesem Forschungsprojekt wollen wir eine Möglichkeit bieten, die individuellen Schwankungen von Stress und Coping mittels einer Smartphone App zu erfassen. Mit Hilfe ihres Smartphones können sie diese Schwankungen systematisch messen und herausfinden wie diese mit Ihrem Tagesablauf und Aktivitäten zusammenhängen. Über die Internetseite können sie den Verlauf ihrer eigenen Daten einsehen und gegebenenfalls mit ihrem behandelten Arzt oder Therapeuten besprechen. </p>
<p>Mit Ihrer Teilnahme unterstützen sie unser Forschungsprojekt, die Schwankungen von Stress und Coping besser zu verstehen. </p>
<h2>TrackYourStress eignet sich nicht zur Therapie von Stress</h2>

<p>Wir möchten ausdrücklich darauf hinweisen, dass wir mit TrackYourStress kein Medizinprodukt bereitstellen. TrackYourStress bietet eine gute Möglichkeit den Verlauf des Stress zu messen und festzustellen unter welchen Bedingungen der Stress stärker oder schwächer ist. </p>

<p>Eine Verschlechterung des Stress ist nicht zu erwarten. Sollten Sie dennoch negative Veränderungen bemerken, beenden sie bitte unverzüglich die Teilnahme und suchen Ihren Arzt oder Therapeuten auf. </p>
<h2>Über das Team<h2>
<p>TrackYourStress ist ein Kooperationsprojekt zwischen folgenden Personen und Universitäten: <br>
Prof. Dr. Thomas Probst (Department für Psychotherapie und Biopsychosoziale Gesundheit, Donau-Universität Krems, Österreich)<br>
Prof. Dr. Dennis John (Evangelische Hochschule Nürnberg)<br>
M.Sc. Pascal Damasch (Institut für Datenbanken und Informationssysteme, Universität Ulm, Deutschland)<br>
B.Sc. Michael Schrempp (Institut für Datenbanken und Informationssysteme, Universität Ulm, Deutschland)<br>
M.Sc. Johannes Schobel (Institut für Datenbanken und Informationssysteme, Universität Ulm, Deutschland)<br>
PD Dr. Winfried Schlee (Klinik für Psychiatrie und Psychotherapie, Universitätsklinikum Regensburg, Deutschland)<br>
B.Sc. Teresa O\'Rourke (Department für Psychotherapie und Biopsychosoziale Gesundheit, Donau-Universität Krems, Österreich)<br>
M.Sc. Robin Kraft (Institut für Datenbanken und Informationssysteme, Universität Ulm, Deutschland)<br>
B.Sc. Julian Haug (Institut für Datenbanken und Informationssysteme, Universität Ulm, Deutschland)<br>
B.Sc. Fabian Haug (Institut für Datenbanken und Informationssysteme, Universität Ulm, Deutschland)<br>
M.Sc. Viktoria Elsässer (Institut für Datenbanken und Informationssysteme, Universität Ulm, Deutschland)<br>
Prof. Dr. Berthold Langguth (Klinik für Psychiatrie und Psychotherapie, Universitätsklinikum Regensburg, Deutschland)<br>
Prof. Dr. Myra Spiliopoulou (Knowledge Management and Discovery Lab, Otto-von-Guericke-Universität Magdeburg, Deutschland)<br>
Prof. Dr. Manfred Reichert (Institut für Datenbanken und Informationssysteme, Universität Ulm, Deutschland)<br>
Dr. Rüdiger Pryss (Institut für Datenbanken und Informationssysteme, Universität Ulm, Deutschland)<br> </p>

<p>Wenn Sie Fragen, Feedback oder Anregungen zu dem Projekt haben, kontaktieren sie uns bitte unter <a href="info@trackyourstress.org."</a> </p>]]>
    </string>
    <string name="Back">Zurück</string>
    <string name="notify401"> Zugangsdaten ungültig. Bitte überprüfen Sie Ihre Eingaben </string>
    <string name="notify403">Nutzer wurde noch nicht verifiziert.</string>
    <string name="password_short">Passwort zu kurz. Bitte versuchen Sie es noch einmal</string>
    <string name="network_error">Netzwerk-Fehler aufgetreten. Überprüfen Sie Ihre Internetverbindung</string>
    <string name="profile_not_loaded">Profildaten können nicht geladen werden</string>
    <string name="daily_notifications_off">Tägliche Benachrichtigungen AUS</string>
    <string name="monthly_notifications_off">Monatliche Benachrichtigungen AUS</string>
    <string name="navigation_drawer_close">Navigation schließen</string>
    <string name="navigation_drawer_open">Navigation öffnen</string>
    <string name="not_applicable">Nicht zutreffend</string>
    <string name="prefer_not_to_say">Keine Angabe</string>
    <string name="Registration">Registrierung</string>
    <string name="password_not_match">Die Passwörter stimmen nicht überein</string>
    <string name="password_too_short">Das Passwort ist zu kurz</string>
    <string name="email_invalid">Die Email ist nicht gültig. Prüfen Sie Ihre Eingabe</string>
    <string name="confirm_requirement">Bitte bestätigen Sie die Bedingung</string>
    <string name="link_sent_check_email">Link wurde erneut gesendet. Prüfen Sie Ihre Emails</string>
    <string name="link_send_not_possible">Link konnte nicht gesendet werden. Nutzer nicht gefunden oder bereits verifiziert</string>
    <string name="imprint">Impressum</string>
    <string name="go_on">Weiter</string>
    <string name="activities_not_loaded">Aktivitäten konnten nicht geladen werden</string>
    <string name="german_flag_description">Deutsche Flagge zur Sprachauswahl</string>
    <string name="english_flag_description">Englische Flagge zur Sprachauswahl</string>
    <string name="error_logout">Fehler bei Logout</string>
    <string name="language_settings">Spracheinstellungen</string>
    <string name="settings">Einstellungen</string>
    <string name="old_password">Altes Passwort</string>
    <string name="password_has_not_been_changed">Passwort wurde nicht verändert</string>
    <string name="new_password">Neues Passwort</string>
    <string name="password_has_been_changed">Passwort geändert</string>
    <string name="please_retry">Bitte versuchen Sie es erneut</string>
    <string name="profile_updated">Profil wurde aktualisiert</string>
    <string name="logout_successful">Logout erfolgreich</string>
    <string name="server_error_occured">Ein Serverfehler ist aufgetreten</string>
    <string name="time_daily_questionnaire">Es ist Zeit für einen täglichen Fragebogen!</string>
    <string name="time_weekly_questionnaire">Es ist Zeit für einen wöchentlichen Fragebogen!</string>
    <string name="time_monthly_questionnaire">Es ist Zeit für einen monatlichen Fragebogen!</string>
    <string name="quesitionnaire_submitted">Fragebogen abgeschickt</string>
    <string name="answersheet_could_not_be_submitted">Fragebogen konnte nicht abgeschickt werden</string>
    <string name="answers_missing">Es fehlen noch Antworten</string>
    <string name="username_needed">Nutzername benötigt</string>
    <string name="double_click_back">Drücken Sie erneut Zurück um zu beenden</string>
    <string name="gender">Geschlecht</string>
    <string name="login">Login</string>
</resources>